<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shockn745.moovin5.motivation.MotivationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/motivation_toolbar"
        style="@style/Toolbar"/>

</RelativeLayout>
